assets/sample_service.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: paddleservice-system
